--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@ai-sdk/google": "^1.2.17",
     "@ai-sdk/groq": "^1.2.9",
     "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/openai-compatible": "^0.2.14",
+    "@ai-sdk/provider": "^1.1.3",
+    "@ai-sdk/provider-utils": "^2.2.8",
     "@ai-sdk/react": "^1.2.12",
     "@ai-sdk/xai": "^1.2.16",
     "@aws-sdk/client-s3": "^3.821.0",
@@ -78,7 +81,9 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "@tailwindcss/oxide"
+      "@tailwindcss/oxide",
+      "esbuild",
+      "sharp"
     ]
   }
 }
