Use model-runner internal ui for talking to DMR
* add build to compose.yaml
* switch to dev build in container

--- a/compose.yaml
+++ b/compose.yaml
@@ -32,7 +32,10 @@ services:
       - "5432:5432"
 
   mcp-ui:
-    image: chat
+    image: mcp-ui
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "3000:3000"
     environment:
