--- a/compose.cloud.yaml
+++ b/compose.cloud.yaml
@@ -26,7 +26,6 @@ services:
     image: docker/agents_gateway:v2
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
-      - "/run/host-services/backend.sock:/run/host-services/backend.sock"
       - "./docker-mcp.yaml:/app/docker-mcp.yaml"
       - "./config.yaml:/app/config.yaml"
     command:
@@ -34,7 +33,7 @@ services:
       - --transport=sse
       - --catalog=/app/docker-mcp.yaml
       - --config=/app/config.yaml
-#      - --secrets=/run/secrets/mcp_secret
+      - --secrets=/run/secrets/mcp_secret
       - --servers=brave
       - --servers=resend
       - --servers=wikipedia-mcp
