--- a/compose.yaml
+++ b/compose.yaml
@@ -27,22 +27,12 @@ services:
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "/run/host-services/backend.sock:/run/host-services/backend.sock"
-      - "./docker-mcp.yaml:/app/docker-mcp.yaml"
-      - "./config.yaml:/app/config.yaml"
     command:
       - --verbose
       - --transport=sse
-      - --catalog=/app/docker-mcp.yaml
-      - --config=/app/config.yaml
       - --secrets=docker-desktop:/run/secrets/mcp_secret
-      - --servers=brave
-      - --servers=resend
-      - --servers=wikipedia-mcp
-      - --tools=brave_web_search
-      - --tools=get_article
-      - --tools=get_summary
-      - --tools=get_related_topics
-      - --tools=send-email
+      - --servers=brave,wikipedia-mcp
+      - --tools=brave_web_search,get_article,get_summary,get_related_topics
       - --port=9011
     secrets:
       - mcp_secret
